# kdevelop-wakatime

./: CMakeLists.txt  LICENSE.GPL3  README.md  kdevwakatime.kdev4
src/: CMakeLists.txt  wakatime.cpp  wakatime.h  wakatime.json
src/tests/: CMakeLists.txt  test_kdevwakatime.cpp
